k8s/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: sinatra-service
spec:
  selector:
    app.kubernetes.io/name: sinatra-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 4567
