k8s/service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: service-external
spec:
  type: ExternalName
  externalName: ip-172-31-83-76.ec2.internal
