k8s/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: sinatra-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 4567
  clusterIP: 10.96.0.2
  type: LoadBalancer
# status:
#   loadBalancer:
#     ingress:
#     - ip: 192.0.2.127
# ip of the externa load balancer
