k8s/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    #app.kubernetes.io/name: consul
    app: consul
    component: server
    release: consul
  ports:
      # port number that resources within the cluster will use to communicate
    - port: 8001
      # port number the container is listening on
      targetPort: 8500
      # external port to connect to the node
      nodePort: 30001
